add tests, refactor