@@ -90,12 +90,9 @@ public class ParquetTableLocation extends AbstractTableLocation {
             parquetMetadata = tableLocationKey.getMetadata();
             rowGroupIndices = tableLocationKey.getRowGroupIndices();
         }
-        {
-            final ParquetColumnResolver.Factory factory = readInstructions.getColumnResolver().orElse(null);
-            resolver = factory == null
-                    ? null
-                    : Objects.requireNonNull(factory.init(tableKey, tableLocationKey));
-        }
+        resolver = readInstructions.getColumnResolverFactory()
+                .map(factory -> factory.of(tableKey, tableLocationKey))
+                .orElse(null);
         final int rowGroupCount = rowGroupIndices.length;
         rowGroups = IntStream.of(rowGroupIndices)
                 .mapToObj(rgi -> parquetFileReader.fileMetaData.getRow_groups().get(rgi))
@@ -194,12 +191,11 @@ public class ParquetTableLocation extends AbstractTableLocation {
             final String[] columnPath = parquetColumnNameToPath.get(parquetColumnName);
             nameList = columnPath == null ? Collections.singletonList(parquetColumnName) : Arrays.asList(columnPath);
         } else {
-            final ColumnDescriptor columnDescriptor = resolver.mapping().get(columnName);
-            if (columnDescriptor == null) {
-                nameList = List.of(); // empty, will not resolve
-            } else {
-                nameList = Arrays.asList(columnDescriptor.getPath());
-            }
+            // empty list will result in exists=false
+            nameList = resolver.of(columnName)
+                    .map(ColumnDescriptor::getPath)
+                    .map(Arrays::asList)
+                    .orElse(List.of());
         }
         final ColumnChunkReader[] columnChunkReaders = Arrays.stream(getRowGroupReaders())
                 .map(rgr -> rgr.getColumnChunk(columnName, nameList))
